@@ -1,0 +1,2 @@
+gphotoframe.glade
+lib/preferences.py
