@@ -1,9 +1,10 @@
 #!/usr/bin/python
 
 from distutils.core import setup
+from DistUtilsExtra.command import *
 
 setup(name='gphotoframe',
-      version='0.2',
+      version='0.1.1',
       description='Gnome Photo Frame',
       author='Yoshizumi Endo',
       author_email='y-endo@ceres.dti.ne.jp',
@@ -12,4 +13,8 @@ setup(name='gphotoframe',
       packages=['gphotoframe', 'gphotoframe.plugins'],
       scripts=['gphotoframe'],
       data_files=[('share/gphotoframe', ['gphotoframe.glade'])],
+      cmdclass = { "build" : build_extra.build_extra,
+                   "build_i18n" : build_i18n.build_i18n,
+                   "build_help" : build_help.build_help,
+                   "build_icons" : build_icons.build_icons }
       )
